website/websites/gp4/code/recursive-scala.log
BUILD COMMANDS FOR: recursive.scala

Wed Mar 21 11:47:07 PDT 2007

( if [ ! -d recursive.scala_run ] ; then mkdir recursive.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/recursive/recursive.scala recursive.scala_run/recursive.scala
( cd recursive.scala_run ; /opt/scala-2.4.0/bin/scalac recursive.scala )
recursive.scala:30: error: scala.Console.printf("Fib({0,number,.#}): {1,number,.#}\012") does not take parameters
    Console.printf("Fib({0,number,.#}): {1,number,.#}\n")((27.0+n), fib(27.0+n))
                                                         ^
one error found
make[3]: [recursive.scala_run] Error 1 (ignored)
touch recursive.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java -Xss32m -server" /opt/scala-2.4.0/bin/scala -classpath recursive.scala_run recursive %A
************************************************************
*   TEST (recursive.scala_run) FAILED - ERROR:  recursive.scala_out differs from Output.3
************************************************************
-rw-r--r-- 1 dunham users 80 Jan 28  2006 Output.3
-rw-r--r-- 1 dunham users 24 Mar 21 11:47 recursive.scala_out


PROGRAM OUTPUT
==============
no such file: recursive
